# squirrel

./: .gitignore  DOCS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml
data/: README.md
data/hiv/: hiv.py  hiv.txt
data/primates/: cchg.py  cercopitheciniae.txt  h_clade_data.csv  primates.py  primates.txt
data/primates/cercopithecinae/: cerco.py  cerco_QNRSVM.csv  cercopithecinae_QNRSVM.py
data/simulations/: experiment.py  generate_networks.py  output-onlinetools (1).txt  output-onlinetools.csv  output-onlinetools.txt  result_experiment.csv  result_experiment.txt
data/simulations/experiment1/: experiment1.py  results_experiment1.csv  t.csv
data/simulations/experiment2/: experiment2.py  results_experiment2.csv  simulate_alignments.py  simulate_sequences.py
data/xiphophorus/: xiphophorus.py
docs/: changelog.rst  conf.py  index.rst  installation.rst  manual.rst  quickstart.rst
docs/api/: algorithms.rst  convenience.rst  datatypes.rst  index.rst  io.rst  pipeline.rst  tsp.rst
experiments/: README.md
experiments/hiv/: hiv.fasta
experiments/primates/all_primates/: all_primates.py
experiments/primates/cercopithecinae/: cerco.txt
experiments/simulations/experiment1/: generate_sdnetworks.py
experiments/xiphophorus/: xiphophorus.py  xiphophorus.txt
gui/: README.md
gui/src/: __main__.py
physquirrel/: LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.cfg
physquirrel/src/physquirrel/: dnetwork.py  quarnetset.py
src/physquirrel/: __init__.py  convenience.py  quarnetset.py  splits.py
src/physquirrel/algorithms/: __init__.py  cycle_resolution.py  delta_heuristic.py  qdistance.py  qjoining.py  qsimilarity.py  squirrel.py  tsp.py  tstar_tree.py  unresolve_tree.py
src/physquirrel/datatypes/: __init__.py  io.py  sqprofile.py  sqprofileset.py
tests/: conftest.py  test_cycle_resolution.py  test_delta_heuristic.py  test_imports.py  test_qdistance.py  test_qsimilarity.py  test_quartet_joining.py  test_real_data.py  test_sqprofile.py  test_sqprofileset.py  test_squirrel.py  test_tsp.py  test_tstar_tree.py  test_unresolve_tree.py
tests/fixtures/: sd_networks.py
