[build-system]
requires = ['setuptools>=54']
build-backend = 'setuptools.build_meta'

[project]
name = "physquirrel"
version = "2.0.0"
description = "a package for reconstructing level-1 phylogenetic networks from sequence alignments or 4-leaf subnetworks"
authors = [
    {name = "Niels Holtgrefe", email = "n.a.l.holtgrefe@tudelft.nl"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"

dependencies = [
    "numpy >= 1.20",
    "networkx >= 3.0",
    "phylozoo >= 0.1.2",
    "numba >= 0.56",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
]
docs = [
    "sphinx >= 7.0",
    "pydata-sphinx-theme >= 0.15",
    "sphinx-autobuild >= 2024.0",
    "sphinx-copybutton >= 0.5",
]

viz = [
    "phylozoo[viz] >= 0.1.2",
]

graphviz = [
    "phylozoo[graphviz] >= 0.1.2",
]
[project.urls]
Homepage = "https://github.com/nholtgrefe/squirrel/tree/main/physquirrel"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
