[metadata]
name = physquirrel
version = 1.0.0
author = N. Holtgrefe
author_email = n.a.l.holtgrefe@tudelft.nl
description = package for reconstructing semi-directed phylogenetic level-1 networks from four-leaved networks and sequence alignments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nholtgrefe/squirrel/tree/main/physquirrel
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.26.4
    networkx >= 3.3
    matplotlib >= 3.9.2
    phylox >= 1.1.0
    python-tsp >= 0.5.0
    pygraphviz >= 1.13

[options.packages.find]
where = src
